<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_charcuteria">Charcuteria</string>
<string name="msg_fresas_bio_g_50">Fresas bio\u2028g 500</string>
<string name="lbl_1">1</string>
<string name="msg_bananas_de_per">Bananas de Perù\u2028Kg 1</string>
<string name="lbl_lista">Lista</string>
<string name="lbl_dia">Dia</string>
<string name="lbl_2_30">2,30 \u20ac</string>
<string name="lbl_lacteos">Lacteos</string>
<string name="lbl_articulos">Articulos</string>
<string name="lbl_caf_y_t">Cafè y tè</string>
<string name="lbl_bananas">Bananas</string>
<string name="lbl_2_90">2,90 \u20ac</string>
<string name="lbl_3_30">3,30 \u20ac</string>
<string name="lbl_menu">Menu</string>
<string name="lbl_iniciar_sesion">INICIAR SESION</string>
<string name="lbl_alcampo">Alcampo</string>
<string name="lbl_naranjas">Naranjas</string>
<string name="lbl_panaderia">Panaderia</string>
<string name="lbl_mercadona">Mercadona</string>
<string name="lbl_crear_cuenta">CREAR CUENTA</string>
<string name="lbl_categorias">Categorias</string>
<string name="lbl_bebidas">Bebidas</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_favoritos">Favoritos</string>
<string name="lbl_uva_negra_g_600">Uva negra\u2028g 600</string>
<string name="lbl_pescado">Pescado</string>
<string name="lbl_aperitivo">Aperitivo</string>
<string name="lbl_limpieza">Limpieza</string>
<string name="lbl_tiendas">Tiendas</string>
<string name="lbl_gold_kg_1">Gold\u2028Kg 1</string>
<string name="lbl_1_98">1,98 \u20ac</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="msg_pantalla_de_bie">Pantalla de bienvenida</string>
<string name="lbl_uva">Uva</string>
<string name="lbl_fruta">Fruta</string>
<string name="lbl_carne">Carne</string>
<string name="lbl_super_deli">Super\u2028Deli</string>
<string name="lbl_lidl">Lidl</string>
<string name="lbl_fresas">Fresas</string>
<string name="lbl_4_55">4,55 \u20ac</string>
<string name="lbl">+</string>
<string name="lbl_ofertas">Ofertas</string>
<string name="msg_naranjas_de_sic">Naranjas de Sicilia\u2028g 800</string>
<string name="lbl_masymas">Masymas</string>
<string name="lbl_manzanas">Manzanas</string>
<string name="lbl_carrefour">Carrefour</string>
<string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
</resources>
